# mock-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test.py  util.py
conf_example/: notebooks.config.json  notebooks.response.json  notebooks.struct.json  notes.config.json  notes.response.json  notes.struct.json  routes.config.json
src/mock_server/: app.py  cli.py  provider.py  response.py  server.py  settings.py  util.py
tests/: test_util.py
