[tool.poetry]
name = "mock-server"
version = "0.1.0"
description = "Mock REST API server"
authors = ["Bitjockey <bitjockey@jackpoint.network>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^14.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
